fix: show burger only on mobile

--- a/src/app/core/components/header.component.scss
+++ b/src/app/core/components/header.component.scss
@@ -20,6 +20,8 @@
 
 .burger {
   @apply
+    hidden
+    xs:block
     absolute
     cursor-pointer
     right-md
